# CommsFramework

./: .gitignore  .travis.yml  CommsFramework.sln  README.txt
ZmqClient/: main.cpp  (+1 more)
src/: CMakeLists.txt  CommsFramework.sln  MAKEFILE  TODO.txt  emscripten_cmake.sh
src/Blackjack/: AskNewCardDialog.cpp  AskNewCardDialog.h  BetSelection.cpp  BetSelection.h  Blackjack.vcxproj  Blackjack.vcxproj.filters  BlackjackDealer.cpp  BlackjackDealer.h  BlackjackGame.cpp  BlackjackGame.h  BlackjackPlayer.cpp  BlackjackPlayer.h  Card.cpp  Card.h  CardActor.cpp  CardActor.h  CardHand.cpp  CardHand.h  CardsShoe.cpp  CardsShoe.h  Deck.cpp  Deck.h  PlayerControls.cpp  PlayerControls.h  SplitCardDialog.cpp  SplitCardDialog.h  main.cpp
src/Blackjack/assets/buttons/Sources/: AcceptBet.pdn  CancelBet.pdn  DoubleButton.pdn  DrawButton.pdn  HoldButton.pdn  ResetBet.pdn  SplitButton.pdn
src/CommsFramework/: ArrayList.h  BaseActor.cpp  BaseActor.h  BaseButton.cpp  BaseDialog.cpp  BaseFont.cpp  BaseFont.h  BaseGraphicEngine.cpp  BaseGraphicEngine.h  BaseKeyboard.h  BaseList.h  BaseMouse.cpp  BaseMouse.h  BaseQueue.h  BaseSprite.cpp  BaseSprite.h  BaseStack.h  BaseText.h  BaseTexture.h  BitHelper.cpp  BitHelper.h  BitmapHandler.cpp  BitmapHandler.h  ClassDiagram.cd  CommsFramework.vcxproj  CommsFramework.vcxproj.filters  ConfigurationManager.cpp  ConfigurationManager.h  DSprite.cpp  DSprite.h  DTexture.cpp  DTexture.h  DrawObject.cpp  DrawObject.h  EncryptedPackageFile.cpp  EncryptedPackageFile.h  EncryptedStreamReader.h  EngineDialogMessage.cpp  EngineDialogMessage.h  FPosition.cpp  (+153 more)
src/CommsFramework/Assets/: books.xml  catalog.xml  config2.xml  config3.xml  config_file_example.xml  package.pak  sprites.xml
src/CommsFramework/Collections/: PointerList.h
src/CommsFramework/Framework/Collections/: ArrayList.h  BaseList.h  BaseQueue.h  BaseStack.h  LiteList.h  PointerList.h  StringList.cpp  StringList.h
src/CommsFramework/Framework/Collections/Custom/: LinkedList.cpp  LinkedList.h  MyArrayList.cpp  MyArrayList.h
src/CommsFramework/Framework/Configuration/: ConfigurationManager.cpp  ConfigurationManager.h
src/CommsFramework/Framework/Engine/: GameEngine.cpp  GameEngine.h  GameModule.cpp  GameModule.h
src/CommsFramework/Framework/Engine/Dialogs/: BaseDialog.cpp  BaseDialog.h  DialogManager.cpp  DialogManager.h  EngineDialogMessage.cpp  EngineDialogMessage.h  GameMessageWindow.cpp  GameMessageWindow.h  MessageDialog.cpp  MessageDialog.h  YesNoDialog.cpp  YesNoDialog.h
src/CommsFramework/Framework/Filesystem/: FileSystem.h  IOUtilities.cpp  IOUtilities.h  PathLoader.cpp  PathLoader.h  XDirectory.cpp  XDirectory.h  XFile.cpp
src/CommsFramework/Framework/Game/: GameRule.cpp  GameRule.h
src/CommsFramework/Framework/Geometry/: FPosition.cpp  FPosition.h  FRectangle.cpp  FRectangle.h  FSize.cpp
src/CommsFramework/Framework/Graphic/: DrawObject.cpp  DrawObject.h  GraphicEngineInitParams.h  TextureManager.cpp  TextureManager.h  TextureRepository.cpp  TextureRepository.h  Viewport.cpp  Viewport.h
src/CommsFramework/Framework/IO/: EncryptedPackageFile.cpp  EncryptedPackageFile.h  EncryptedStreamReader.cpp  FileReader.cpp  FileReader.h  PackageFile.cpp  PackageFile.h
src/CommsFramework/Framework/Image/: TgaFile.cpp
src/CommsFramework/Framework/Input/: MouseClickInfo.h
src/CommsFramework/Framework/Math/: Functions.cpp  Functions.h  RandomGen.cpp  WeightedNumberGenerator.cpp  WeightedNumberGenerator.h
src/CommsFramework/Framework/Network/: Network.cpp  Network.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
src/CommsFramework/Framework/Patterns/: IObservable.h
src/CommsFramework/Framework/System/: BitHelper.cpp  BitHelper.h  Platform.cpp  Platform.h  Utilities.cpp  Utilities.h
src/CommsFramework/Framework/Types/: GenType.cpp
src/CommsFramework/Framework/Utilities/: QuickWindow.cpp  QuickWindow.h  StringFunctions.cpp  StringFunctions.h
src/CommsFramework/Framework/XML/: XmlReader.cpp  XmlReader.h
src/CommsFramework/Graphic/: DSprite.cpp  DSprite.h  DTexture.cpp  DTexture.h  FPosition.cpp  FPosition.h  FSize.cpp  FSize.h  GraphicEngine.cpp  GraphicEngine.h  GraphicEngineInitParams.cpp  GraphicEngineInitParams.h  SfSprite.cpp
src/CommsFramework/XML/: XmlReader.cpp
src/DownAcross/: DownAcross.vcxproj  DownAcross.vcxproj.filters  GameGrid.cpp  GameGrid.h  GameSettings.cpp  GameSettings.h  GridTile.cpp  GridTile.h  InfoTile.cpp  InfoTile.h  main.cpp
src/Engine/: Engine.vcxproj  Engine.vcxproj.filters  TextureManager.cpp  TextureManager.h
src/FantasyGame/: AreaGrid.cpp  AreaGrid.h  CheatMenu.cpp  CheatMenu.h  FantasyGame.cpp  FantasyGame.h  FantasyGame.vcxproj  FantasyGame.vcxproj.filters  LocalGrid.cpp  LocalGrid.h  Map.cpp  Map.h  MapGrid.cpp  MapGrid.h  MapLoader.cpp  MapLoader.h  MapXmlStructs.cpp  MapXmlStructs.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  ProgDef.h  REWORK.txt  SimpleMenu.cpp  SimpleMenu.h  Tile.cpp  Tile.h  World.cpp  World.h  config.xml  main.cpp
src/FantasyGame/assets/: World.xml  config.xml  default_map.xml  game_config.xml  general_settings.xml  map1.xml  spritesheet.xml
src/MatchFour/: Coin.cpp  Coin.h  MatchFour.vcxproj  main.cpp
src/MatchFour/Assets/: match_four_config.xml  package.pak  rootConfig.xml
src/Platformer/: MarioPlayer.cpp  MarioPlayer.h  Platformer.vcxproj  Platformer.vcxproj.filters  main.cpp
src/PongGame/: PongBall.cpp  PongBall.h  PongGame.vcxproj  PongGame.vcxproj.filters  PongPaddle.cpp  PongPaddle.h  main.cpp
src/PuzzleGame/: GameButton.cpp  GameButton.h  GameCore.cpp  GameCore.h  PuzzleGame.vcxproj  PuzzleGame.vcxproj.filters  main.cpp
src/QtWindow/TestWindow/: TestWindow.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/SmallProj/: SmallProj.vcxproj  Stuff.cpp  Stuff.h  main.cpp  makefile
src/TestApp/: TestApp.vcxproj  main.cpp
src/UnitTests/CommsFramework.UnitTests/: CommsFramework.UnitTests.vcxproj  CommsFramework.UnitTests.vcxproj.filters  TextureManagerTests.cpp  TextureManagerTests.h  main.cpp
src/ZmqClient/: ZmqClient.vcxproj
src/ZmqServer/: ZmqServer.vcxproj
(+150 files in other folders)
